--- a/WebApp/views/index.ejs
+++ b/WebApp/views/index.ejs
@@ -3,9 +3,108 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <%# Custom Javascript %>
+
+    <%# TOAST CHART UI %>
+    <link rel='stylesheet' href='https://uicdn.toast.com/tui.chart/latest/tui-chart.css'/>
+    <script src="https://uicdn.toast.com/tui.chart/latest/tui-chart-all.min.js"></script>
+
+    <%# Bootstrap UI %>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-3.5.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <button type="button" class="btn btn-primary" id="btn_30">30 Days</button>
+    <button type="button" class="btn btn-primary" id="btn_60">60 Days</button>
+    <button type="button" class="btn btn-primary" id="btn_90">90 Days</button>
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-secondary">Left</button>
+      <button type="button" class="btn btn-secondary">Middle</button>
+      <button type="button" class="btn btn-secondary">Right</button>
+    </div>
+    <div id="chart-area"></div>
   </body>
+
+  <script>
+    var container = document.getElementById('chart-area');
+    var chartData = {
+        categories: ['01/01/2016', '02/01/2016', '03/01/2016', '04/01/2016', '05/01/2016', '06/01/2016', '07/01/2016', '08/01/2016', '09/01/2016', '10/01/2016', '11/01/2016', '12/01/2016'],
+        series: [
+            {
+                name: 'SS',
+                data: [-3.5, -1.1, 4.0, 11.3, 17.5, 21.5, 24.9, 25.2, 20.4, 13.9, 6.6, -0.6]
+            }
+        ]
+    };
+    var options = {
+        chart: {
+            width: 1160,
+            height: 540,
+            title: '24-hr Average Temperature'
+        },
+        yAxis: {
+            title: 'Temperature (Celsius)',
+        },
+        xAxis: {
+            title: 'Month',
+            pointOnColumn: true,
+            dateFormat: 'MMM',
+            tickInterval: 'auto'
+        },
+        series: {
+            showDot: false,
+            zoomable: true
+        },
+        tooltip: {
+            suffix: '°C'
+        }
+    };
+    var theme = {
+        series: {
+            colors: [
+                '#83b14e', '#458a3f', '#295ba0', '#2a4175', '#289399',
+                '#289399', '#617178', '#8a9a9a', '#516f7d', '#dddddd'
+            ]
+        }
+    };
+    // For apply theme
+    // tui.chart.registerTheme('myTheme', theme);
+    // options.theme = 'myTheme';
+    var chart = tui.chart.lineChart(container, chartData, options);
+  </script>
+  <script>
+    function updateData(data) {
+        var newData = {
+            categories:data.trading_date,
+            series: [
+                {
+                    name: data.trading_corp,
+                    data: data.trading_price
+                }
+            ]
+        }
+        chart.setData(newData);
+    }
+
+    var stockName = "SS";
+
+    $('#btn_30, #btn_60, #btn_90').click(function() {
+        $.ajax({
+            type:'POST',
+            url:'/log',
+            data:{corp:stockName, days:$(this).attr("id").substr(4)},
+            success: function(data) {
+                updateData(data);
+            },
+            error: function(e) {
+                alert(e.responseText);
+            }
+        })
+    });
+  </script>
 </html>
